Made some changes. The tests are running just fine.
Todo: Transistor, Magic Room